# Epitech

./: README.md
103architect/: 103architect.c  Makefile  matrice.c
103architect/include/: my.h
cpp_arcade/: .gitignore  Makefile  README
cpp_arcade/doc/: doc.html
cpp_arcade/game/centipede/: ArcadeCentipede.cpp  ArcadeCentipede.hpp  getInstance.cpp
cpp_arcade/game/pacman/: ArcadePacman.cpp  ArcadePacman.hpp  getInstance.cpp
cpp_arcade/game/snake/: ArcadeSnake.cpp  ArcadeSnake.hpp  getInstance.cpp
cpp_arcade/game/solarfox/: ArcadeSolarFox.cpp  ArcadeSolarFox.hpp  getInstance.cpp
cpp_arcade/games/: Makefile
cpp_arcade/img/arrow-down/: block.txt
cpp_arcade/img/bg0/: Thumbs.db
cpp_arcade/img/logo/: logo9block.txt
cpp_arcade/img/logo/logo0/: block.txt
cpp_arcade/img/logo/logo1/: block.txt
cpp_arcade/img/logo/logo10/: block.txt
cpp_arcade/img/logo/logo11/: block.txt
cpp_arcade/img/logo/logo12/: block.txt
cpp_arcade/img/logo/logo13/: block.txt
cpp_arcade/img/logo/logo14/: block.txt
cpp_arcade/img/logo/logo15/: block.txt
cpp_arcade/img/logo/logo16/: block.txt
cpp_arcade/img/logo/logo17/: block.txt
cpp_arcade/img/logo/logo18/: block.txt
cpp_arcade/img/logo/logo19/: block.txt
cpp_arcade/img/logo/logo2/: block.txt
cpp_arcade/img/logo/logo3/: block.txt
cpp_arcade/img/logo/logo4/: block.txt
cpp_arcade/img/logo/logo5/: block.txt
cpp_arcade/img/logo/logo6/: block.txt
cpp_arcade/img/logo/logo7/: block.txt
cpp_arcade/img/logo/logo8/: block.txt
cpp_arcade/img/logo/logo9/: block.txt
cpp_arcade/inc/: Arcade.hpp  Block.hpp  Common.hpp  DLLoader.hpp  Error.hpp  Game.hpp  IGame.hpp  IGraphic.hpp  Screen.hpp  Timer.hpp  Utilities.hpp  Vec2.hpp
cpp_arcade/lib/: Makefile
cpp_arcade/lib/ncurses/: ArcadeNcurses.cpp  ArcadeNcurses.hpp  getInstance.cpp
cpp_arcade/lib/opengl/: ArcadeOpenGL.cpp  ArcadeOpenGL.hpp  getInstance.cpp
cpp_arcade/lib/sdl2/: ArcadeSDL2.cpp  ArcadeSDL2.hpp  getInstance.cpp
cpp_arcade/lib/sfml/: ArcadeSFML.cpp  ArcadeSFML.hpp  getInstance.cpp
cpp_arcade/src/: Arcade.cpp  Game.cpp  Screen.cpp  Utilities.cpp  main.cpp
cpp_indie_studio/: .gitignore  CMakeLists.txt
cpp_indie_studio/doc/: Install.md
cpp_indie_studio/script/: linux.sh  windows.bat  windows_clean.bat
cpp_indie_studio/src/: Generator.cpp  Generator.hpp  IEntity.hpp  Main.cpp  OLDclient.cpp  Parser.cpp  Parser.hpp  Serializer.cpp  Serializer.hpp  SocketManager.cpp  SocketManager.hpp  Sound.cpp  Sound.hpp  Timer.cpp  Timer.hpp  client2.cpp  model.cpp
cpp_indie_studio/src/Character/: AAI.cpp  AAI.hpp  ACharacter.cpp  ACharacter.hpp  Player.cpp  Player.hpp
cpp_indie_studio/src/Core/: CoreAI.cpp  CoreAI.hpp  CoreClient.cpp  CoreClient.hpp  CorePlayer.cpp  CorePlayer.hpp  CoreServer.cpp  CoreServer.hpp  ICore.hpp
cpp_indie_studio/src/Difficulties/: ADifficulties.cpp  ADifficulties.hpp  Easy.cpp  Easy.hpp  IDifficulties.hpp
cpp_indie_studio/src/Graphics/: AScene.hpp  Animation.cpp  Animation.hpp  CMakeLists.txt  Event.hpp  GameMenu.cpp  GameMenu.hpp  GameRender.cpp  GameRender.hpp  LobbySolo.cpp  LobbySolo.hpp  MainMenu.cpp  MainMenu.hpp  Menu.hpp  MultiMenu.cpp  MultiMenu.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PlayMenu.cpp  PlayMenu.hpp
cpp_indie_studio/src/Object/: AObject.hpp
cpp_indie_studio/src/Object/ABomb/: ABomb.cpp  ABomb.hpp  DefaultBomb.cpp  DefaultBomb.hpp
cpp_indie_studio/src/Object/APowerUp/: APowerUp.cpp  APowerUp.hpp  PowerRange.cpp  PowerRange.hpp  PowerSlot.cpp  PowerSlot.hpp  PowerSpeed.cpp  PowerSpeed.hpp
cpp_indie_studio/src/Object/AWall/: AWall.cpp  AWall.hpp
cpp_indie_studio/src/Threads/: DataQueue.hpp  IDataQueue.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp
cpp_indie_studio/tests/: test_indie.sh
